	  device/non-free/lib/pic14/libdev/pic16f1517.c,
	  device/non-free/lib/pic14/libdev/pic16f1518.c,
	  device/non-free/lib/pic14/libdev/pic16f1519.c,
	  device/non-free/lib/pic14/libdev/pic16f1526.c,
	  device/non-free/lib/pic14/libdev/pic16f1527.c:
	  applied patch #3471142: [PIC14] more enchanced core devices,
	  thanks to Gal Zsolt
	* doc/sdccman.lyx: added new 16f15xx devices to the list

2012-02-11 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr20601-1.c:
	  Disabled test for host, since _Noreturn support is required.
	* support/regression/tests/gcc-torture-execute-pr23047.c:
	  Removed test, since it seems to test for implementation-defined behaviour.
	* support/regression/tests/gcc-torture-execute-pr33779-1.c:
	  Use exact-width integer types from stdint.h instead, no longer require long to be 32 bits.

2012-02-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Increase flexibility of handling of register pair hl over function calls.

2012-02-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/*
	  Added some more tests from the execute part of the gcc torture regression test suite.

2012-02-10 Borut Razem <borut.razem AT gmail.com>

	* configure, Makefile.in, configure.in, sdccconf_in.h,
	  device/lib/z180/Makefile.in, device/lib/small/Makefile.in,
	  device/lib/z80/Makefile.in, device/lib/gbz80/Makefile.in,
	  device/lib/ds390/Makefile.in, device/lib/medium/Makefile.in,
	  device/lib/Makefile.in, device/lib/ds400/Makefile.in,
	  device/lib/mcs51/Makefile.in, device/lib/huge/Makefile.in,
	  device/lib/large/Makefile.in, device/lib/r2k/Makefile.in,
	  device/lib/hc08/Makefile.in, Makefile.common.in,
	  support/scripts/sdcc.nsi, support/sdbinutils/*:
	  device/lib/z180/Makefileadded sdbinutils: sdar and sdranlib
	* device/lib/z180/Makefile:
	  deleted, generated from device/lib/z180/Makefile.in
