@@ -1,9 +1,16 @@
 #!/bin/sh
 # Script to crosscompile with mingw32
-TOOLSPREFIX=/usr/local/cross-tools/bin/i586-mingw32msvc-
+if [ $(expr $(hostname) : '.*\.') != '0' ];
+then
+  HOSTNAME=$(expr $(hostname) : '\([^.]*\).')
+else
+  HOSTNAME=$(hostname)
+fi
+TOOLSPREFIX=${HOME}/local-${HOSTNAME}/cross-tools/bin/i586-mingw32msvc-
 
 export CC=${TOOLSPREFIX}gcc
 export CXX=${TOOLSPREFIX}g++
+export AR=${TOOLSPREFIX}ar
 export RANLIB=${TOOLSPREFIX}ranlib
 export STRIP=${TOOLSPREFIX}strip
 
